[package]
name = "meili-crates"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync"
] }
async-compression = { version = "0.4", features = ["futures-io", "gzip", "tokio"] }
atom_syndication = "0.12"
cargo_toml = "0.16"
comrak = { version = "0.19", default-features = false }
csv = "1.1.1"
flate2 = "1.0.11"
futures = "0.3"
futures-timer = "3"
# isahc = "1"
meilisearch-sdk = { version = "0.24", default-features = false }
scraper = { version = "0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
url = { version = "2", features = ["serde"] }
walkdir = "2.0"
envy = "0.4.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
color-eyre = "0.6"
reqwest = { version = "0.11.22", features = ["rustls-tls-webpki-roots", "stream", "tokio-util", "gzip"] }
tokio-util = { version = "0.7.9", features = ["compat"] }
bytes = "1.5.0"
