[package]
name = "search-crates-pm"
version = "0.1.0"
authors = ["Carter Himmel <me@fyko.net>", "Clément Renault <renault.cle@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "io-util",
  "fs",
  "sync"
] }
async-compression = { version = "0.4", features = ["futures-io", "gzip", "tokio"] }
atom_syndication = "0.12"
cargo_toml = "0.16"
comrak = { version = "0.19", default-features = false }
csv = "1"
flate2 = "1"
futures = "0.3"
meilisearch-sdk = { version = "0.24", default-features = false }
scraper = { version = "0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
walkdir = "2.0"
envy = "0.4"
once_cell = "1"
color-eyre = "0.6"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "stream", "tokio-util", "gzip"] }
futures-timer = "3"
clokwerk = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false }
